[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/Xolonium-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Stone elements/elementStone011.png" type="Texture" id=2]
[ext_resource path="res://Assets/Stone elements/elementStone012.png" type="Texture" id=3]
[ext_resource path="res://UI/UI.gd" type="Script" id=4]
[ext_resource path="res://Assets/HeartIcons/hud_heartFull.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 8
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
layer = -1
script = ExtResource( 4 )

[node name="Boards" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 16.0
margin_bottom = 140.0
custom_constants/separation = 16
alignment = 1

[node name="LevelBoard" type="TextureRect" parent="Boards"]
margin_left = 19.0
margin_right = 159.0
margin_bottom = 140.0
rect_min_size = Vector2( 140, 140 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Boards/LevelBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1

[node name="LevelText" type="Label" parent="Boards/LevelBoard/VBoxContainer"]
margin_top = 26.0
margin_right = 140.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0.388235, 0.529412, 0.894118, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level"
align = 1

[node name="LevelNum" type="Label" parent="Boards/LevelBoard/VBoxContainer"]
margin_top = 75.0
margin_right = 140.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.388235, 0.529412, 0.894118, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="LifeBoard" type="TextureRect" parent="Boards"]
margin_left = 175.0
margin_right = 455.0
margin_bottom = 140.0
rect_min_size = Vector2( 280, 140 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Boards/LifeBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1

[node name="LifeText" type="Label" parent="Boards/LifeBoard/VBoxContainer"]
margin_top = 23.0
margin_right = 281.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.231373, 0.682353, 0.690196, 1 )
custom_fonts/font = SubResource( 2 )
text = "Life"
align = 1

[node name="HeartsContainer" type="HBoxContainer" parent="Boards/LifeBoard/VBoxContainer"]
margin_top = 72.0
margin_right = 281.0
margin_bottom = 117.0
alignment = 1

[node name="Heart1" type="TextureRect" parent="Boards/LifeBoard/VBoxContainer/HeartsContainer"]
margin_right = 53.0
margin_bottom = 45.0
texture = ExtResource( 5 )

[node name="Heart2" type="TextureRect" parent="Boards/LifeBoard/VBoxContainer/HeartsContainer"]
margin_left = 57.0
margin_right = 110.0
margin_bottom = 45.0
texture = ExtResource( 5 )

[node name="Heart3" type="TextureRect" parent="Boards/LifeBoard/VBoxContainer/HeartsContainer"]
margin_left = 114.0
margin_right = 167.0
margin_bottom = 45.0
texture = ExtResource( 5 )

[node name="Heart4" type="TextureRect" parent="Boards/LifeBoard/VBoxContainer/HeartsContainer"]
margin_left = 171.0
margin_right = 224.0
margin_bottom = 45.0
texture = ExtResource( 5 )

[node name="Heart5" type="TextureRect" parent="Boards/LifeBoard/VBoxContainer/HeartsContainer"]
margin_left = 228.0
margin_right = 281.0
margin_bottom = 45.0
texture = ExtResource( 5 )

[node name="PowerBoard" type="TextureRect" parent="Boards"]
margin_left = 471.0
margin_right = 611.0
margin_bottom = 140.0
rect_min_size = Vector2( 140, 140 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Boards/PowerBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1

[node name="PowerText" type="Label" parent="Boards/PowerBoard/VBoxContainer"]
margin_top = 26.0
margin_right = 140.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0.913725, 0.741176, 0.0313726, 1 )
custom_fonts/font = SubResource( 3 )
text = "Power"
align = 1

[node name="PowerNum" type="Label" parent="Boards/PowerBoard/VBoxContainer"]
margin_top = 75.0
margin_right = 140.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.913725, 0.741176, 0.0313726, 1 )
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1
